# gps_spoofing_detection

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
linux-embedded-hal-0.3.2/: .cargo_vcs_info.json  Cargo.toml
src/: lib.rs  main.rs
src/gps/: gps.rs  main.rs
src/mpu6050/: accel.rs  main.rs  mod.rs  old.rs
src/neo6m/: gps.rs  mod.rs  old.rs
