[package]
name = "gps_spoofing_detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"

# For GPS
adafruit_gps = "0.4.1"

# For MPU6050
mpu6050-dmp = "0.3.0"
i2cdev = "0.6.0"
rppal = "0.15.0"